# flappybird

./: Cargo.toml  README.md  frag.shader  vert.shader
assets/: README.md
src/: background.rs  bird.rs  main.rs  message.rs  over.rs  pipe_system.rs  score.rs  state.rs  texture.rs  traits.rs  transformations.rs  uniforms.rs  utils.rs  vertex.rs
