[package]
name = "untitled1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.30.2"
image = "0.23.14"
nalgebra = "0.29.0"
rand = "0.8.4"
arrayvec = "0.7.2"


[dependencies.amethyst]
version = "0.15.3"
features = ["vulkan"]